# sty-light

./: README.md
scripts/: build_libpixyusb.sh  build_pen.sh
source/CastScreen/app/: build.gradle
source/CastScreen/app/src/main/: AndroidManifest.xml
source/CastScreen/app/src/main/res/layout/: activity_main.xml
source/CastScreen/app/src/main/res/menu/: menu_main.xml
source/CastScreen/app/src/main/res/values/: strings.xml
source/CastScreen/gradle/wrapper/: gradle-wrapper.properties
source/CastScreen/receiver/: cs_receiver  cs_receiver.py  cs_receiver_conn  cs_receiver_conn.py  video_client.mpeg
source/MediaProjectionDemo/: AndroidManifest.xml  build.gradle
source/MediaProjectionDemo/backup/: ScreenCaptureImageActivity.java  javaservertho.java
source/MediaProjectionDemo/res/layout/: activity_main.xml
source/MediaProjectionDemo/res/res/values/: strings.xml
source/MediaProjectionDemo/src/com/mtsahakis/mediaprojectiondemo/: ScreenCaptureImageActivity.java
source/Receiver/: server.java
source/StyLightApp/: local.properties
source/StyLightApp/app/: build.gradle  proguard-rules.pro
source/StyLightApp/app/src/main/: AndroidManifest.xml
source/StyLightApp/app/src/main/cpp/: native-lib.cpp
source/StyLightApp/app/src/main/res/layout/: activity_main.xml
source/StyLightApp/app/src/main/res/menu/: menu_main.xml
source/StyLightApp/gradle/wrapper/: gradle-wrapper.properties
source/StyLightApp/old/: activity_main_old.xml  strings_old.xml
source/libpixyusb/: CMakeLists.txt
source/pen/: CMakeLists.txt  coordinates.cpp  receive.c  send.c
(+10 files in other folders)
